feat: add handlebars

--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "nodemon app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node models/seeds/todoSeeder.js" // 新增腳本
+    "seed": "node models/seeds/todoSeeder.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.2",
+    "mongoose": "^6.0.13"
   }
 }
